<resources>
    <string name="app_name">Drive Up</string>
    <string name="hint_login_username">Nom d\'utilisateur</string>
    <string name="hint_login_password">********</string>
    <string name="title_activity_home">Accueil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MONKAMBULA ANNE</string>
    <string name="nav_header_subtitle">Chef de projet</string>
    <string name="nav_header_desc">Navigation Entête</string>
    <string name="action_settings">Paramètres</string>

    <string name="menu_dashboard">Tableau de board</string>
    <string name="menu_command">Commandes</string>
    <string name="menu_provisioning">Approvisionnemnet</string>
    <string name="menu_production">Production</string>
    <string name="menu_catalog">Catalogue</string>
    <string name="menu_version_desc">Version 1.0</string>
    <string name="menu_about">A propos</string>
    <string name="menu_logout">Déconnexion</string>
    <string name="confirm_no">Non</string>
    <string name="confirm_yes">Oui</string>

    <string name="description_app">
        "Drive Up est un Progiciel de Gestion Intégré Mobile, vous permettant de gérer votre business efficacment. Drive Up"
        "s\'utilise pour les petites entreprises. Vous pouvez suivre vos activités partout où vous êtes tant au bureau ou à l\'extérieur."
        "\n\n"
        "Drive Up est un projet en cours de développement. De cette version Beta 1.0, se déploira une version stable pour l\'utilisation"
        "grand public."
        "\n\n"
        "Développeur : MONKAMBULA ANNE\n"
        "Ville                : Kinshasa\n"
        "Pays               : RDC\n"
        "Année            : 20/01/2022\n"
        "Supervision  : Mydom Businesses Group Sarl"
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_unit_price">12.000 Fc</string>
    <string name="product_unit_price_label">Prix unitaire :</string>
    <string name="product_color">noir</string>
    <string name="product_color_label">Couleur :</string>
    <string name="product_stock">03</string>
    <string name="product_stock_label">Stock :</string>
    <string name="product_format">A3</string>
    <string name="product_title">Cadre Privilège</string>
    <string name="product_title_label">Intitulé</string>
    <string name="product_section_title">Liste des produits</string>
    <string name="up">Up</string>
    <string name="drive">Drive</string>
    <string name="furniture_section_title">Liste des fournitures</string>

</resources>