<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_command"
            android:title="@string/menu_command" />
        <item
            android:id="@+id/nav_provisioning"
            android:title="@string/menu_provisioning" />
        <item
            android:id="@+id/nav_production"
            android:title="@string/menu_production" />
    </group>
    <group android:checkableBehavior="single">
        <item android:title="">
            <menu>
                <item
                    android:id="@+id/nav_catalog"
                    android:title="@string/menu_catalog" />
            </menu>
        </item>
    </group>
    <group  android:checkableBehavior="single">
        <item android:title="@string/menu_version_desc">
            <menu>
                <item
                    android:id="@+id/nav_about"
                    android:title="@string/menu_about" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="@string/menu_logout" />
            </menu>
        </item>
    </group>

</menu>