<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.driveup.erp.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_command"
        android:name="com.driveup.erp.ui.gallery.GalleryFragment"
        android:label="@string/menu_command"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_provisioning"
        android:name="com.driveup.erp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_provisioning"
        tools:layout="@layout/fragment_slideshow" />
</navigation>